[gd_scene load_steps=2 format=3 uid="uid://dympmlnduawd"]

[ext_resource type="Script" uid="uid://b7kstevyn5xd2" path="res://scripts/StudentListItem.gd" id="1_vfm8d"]

[node name="StudentListItem" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 0
script = ExtResource("1_vfm8d")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="StudentNameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CoursesLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ProgramLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CreditsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
